--- a/qommunicator/templates/qsub_job.submit.j2
+++ b/qommunicator/templates/qsub_job.submit.j2
@@ -5,7 +5,7 @@
 #$ -N {{ params.job_name }}
 #$ -o {{ params.output_path }}
 #$ -e {{ params.error_path }}
-#$ -wd {{ params.working_directory_path }}
+#$ -wd {{ params.working_dir_path }}
 #$ -V
 #$ -q {{ params.que }}
 
